force-app/main/default/objects/Position__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <referenceTo>Sharat_Sushma_Class_c__x</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>