force-app/main/default/objects/Position__c/fields/Login_Detail__c.field-meta.xml
<CustomField>
    <fullName>Login_Detail__c</fullName>
    <label>Login Detail</label>
    <referenceTo>Login_Detail__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>