force-app/main/default/objects/Position__c/recordTypes/One.recordType-meta.xml
<RecordType>
    <fullName>One</fullName>
    <active>true</active>
    <label>One</label>
</RecordType>