force-app/main/default/objects/Position__c/recordTypes/Three.recordType-meta.xml
<RecordType>
    <fullName>Three</fullName>
    <active>true</active>
    <label>Three</label>
</RecordType>