force-app/main/default/objects/Position__c/recordTypes/Two.recordType-meta.xml
<RecordType>
    <fullName>Two</fullName>
    <active>true</active>
    <label>Two</label>
</RecordType>